--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
+
+@import url('https://fonts.cdnfonts.com/css/bubbleboddy-neue-trial');
+
+                
+body{
+    background-color: #F9D0A3;
+    font-family: 'Comfortaa';
+}
+
+h1, h2 {
+    font-family: 'Bubbleboddy Neue', cursive;
+}
