ajout des commentaires

--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -1,4 +1,4 @@
-
+  <!-- card bootstrap pour l'affiche des donnée récupérés par les pipes-->
 
   <div class="container mt-4">
     <div class="row">
