--- a/src/app/components/caroussel/caroussel.component.html
+++ b/src/app/components/caroussel/caroussel.component.html
@@ -6,7 +6,7 @@
   </h1>
 
  
-
+<!-- carousel qui n'était pas demander, just epour le plaisir et le defis personel d'en intégrer un, je trouvai que le rendu est plus sympa avec-->
 <ngb-carousel [interval]="3000" [wrap]="true" [keyboard]="false" [pauseOnHover]="false" [showNavigationArrows]="false" [showNavigationIndicators]="true">
     <ng-template ngbSlide *ngFor="let img of images; let i = index" [id]="'slide-' + i">
         <div class="carousel-img-container">
