--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -1,3 +1,4 @@
+<!-- affichage des produits en détails grace aux pipes dans la fenêtre product-->
 
 <app-header></app-header>
 <div class="content">
